new file:   .gitignore 	modified:   product/product/.env 	new file:   product/product/.env.example 	modified:   product/product/settings.py 	new file:   product/product/tests/__init__.py 	new file:   product/product/tests/test_models.py 	new file:   product/product/tests/test_url.py 	new file:   product/product/tests/test_views.py 	modified:   product/product/urls.py 	modified:   product/product/views.py

--- a/product/product/.env
+++ b/product/product/.env
@@ -1,11 +1,7 @@
 SECRET_KEY=django-insecure-2^fvyab%lfsn2advk^$g@i3on#@c=x^u@(o7k9h(()c%^t271w
 DEBUG=True
-
-DATABASES=default: 
-        'ENGINE': 'django.db.backends.postgresql',
-        'NAME': 'postgres',
-        'USER': 'product',
-        'PASSWORD': 'hamza',
-        'HOST': 'localhost',
-        'PORT': '5432',
-    
+DATABASE_NAME=postgres
+DATABASE_USER=product
+DATABASE_PASSWORD=hamza
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
