modified:   product/product/.env.example

--- a/product/product/.env.example
+++ b/product/product/.env.example
@@ -1,5 +1,5 @@
-SECRET_KEY="django-insecure-2^ndjjn5fdgdv8%gfdgvfvdvxv54fngfbhyxc"
-DEBUG=True
+SECRET_KEY="django"
+DEBUG="Test"
 DATABASE_NAME="Test"
 DATABASE_USER="Test"
 DATABASE_PASSWORD="Test"
