--- a/product/docker-compose.yml
+++ b/product/docker-compose.yml
@@ -1,11 +1,27 @@
-version: '4'
-
+version: '3'
 services:
   web:
     build: .
-    command: bash -c "python3 manage.py runserver"
-    container_name: product
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - .:/app
+      - .:/code
     ports:
       - "8000:8000"
+    depends_on:
+      - db
+      - redis
+    env_file:
+      - product/.env
+
+  db:
+    image: postgres:12.0-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - product/.env
+
+  redis:
+    image: redis
+
+volumes:
+  postgres_data:
