--- a/product/requirements.txt
+++ b/product/requirements.txt
@@ -6,7 +6,9 @@ comm==0.1.2
 DateTime==5.0
 debugpy==1.6.6
 decorator==5.1.1
-Django==4.1.4
+django==4.0.7
+celery==5.2.7
+flower==1.2.0
 django-admin-list-filter-dropdown==1.0.3
 django-admin-rangefilter==0.9.0
 django_debug_toolbar==3.8.1
@@ -30,7 +32,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 platformdirs==2.6.2
 prompt-toolkit==3.0.36
-psutil==5.9.4
+psutil==5.9.3
 psycopg2-binary==2.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
